table css updates

--- a/roles.html
+++ b/roles.html
@@ -132,37 +132,37 @@
                                     <div class="serial col-1">id</div>
                                     <div class="serial col-1">Role</div>
                                     <div class="serial col-2">Description</div>
-                                    <div class="serial col-2 pr-1">Neighborhood</div>
+                                    <div class="serial col-3">Neighborhood</div>
                                     <div class="serial col-2">Start</div>
                                     <div class="serial col-2">End</div>
-                                    <div class="serial col-2"></div>
+                                    <div class="serial col-1"></div>
                                 </div>
                                 <div class="table-row">
                                     <div class="serial col-1">01</div>
                                     <div class="serial col-1">Admin</div>
                                     <div class="serial col-2">Full control</div>
-                                    <div class="serial col-2">C2E</div>
+                                    <div class="serial col-3">C2E</div>
                                     <div class="serial col-2">01-15-2020</div>
                                     <div class="serial col-2">02-15-2020</div>
-                                    <div class="serial col-2"><img src="assets/img/edit.png" class="img edit-icon" data-toggle="modal" data-target="#editRoleModal"></div>
+                                    <div class="serial col-1"><img src="assets/img/edit.png" class="img edit-icon" data-toggle="modal" data-target="#editRoleModal"></div>
                                 </div>
                                 <div class="table-row">
                                     <div class="serial col-1">02</div>
                                     <div class="serial col-1">User</div>
                                     <div class="serial col-2">Limited control</div>
-                                    <div class="serial col-2">C2E</div>
+                                    <div class="serial col-3">C2E</div>
                                     <div class="serial col-2">04-15-2020</div>
                                     <div class="serial col-2">06-27-2020</div>
-                                    <div class="serial col-2"><img src="assets/img/edit.png" class="img edit-icon" data-toggle="modal" data-target="#editRoleModal"></div>
+                                    <div class="serial col-1"><img src="assets/img/edit.png" class="img edit-icon" data-toggle="modal" data-target="#editRoleModal"></div>
                                 </div>
                                 <div class="table-row">
                                     <div class="serial col-1">03</div>
                                     <div class="serial col-1">Visitor</div>
                                     <div class="serial col-2">No control</div>
-                                    <div class="serial col-2">None</div>
+                                    <div class="serial col-3">None</div>
                                     <div class="serial col-2">11-02-2021</div>
                                     <div class="serial col-2">12-12-2022</div>
-                                    <div class="serial col-2"><img src="assets/img/edit.png" class="img edit-icon" data-toggle="modal" data-target="#editRoleModal"></div>
+                                    <div class="serial col-1"><img src="assets/img/edit.png" class="img edit-icon" data-toggle="modal" data-target="#editRoleModal"></div>
                                 </div>
                             </div>
                         </div>
@@ -321,7 +321,7 @@
                                         </div>
                                         <div class="form-row">
                                             <div class="form-group mx-auto col-md-8">
-                                                 <label for="neighborhood-info">Neighborhood</label>
+                                                <label for="neighborhood-info">Neighborhood</label>
                                                 <select class="form-control" id="neighborhood-info" placeholder="">
                                                     <option>1</option>
                                                     <option>2</option>
@@ -380,9 +380,11 @@
                                                 <input type="text" class="form-control" id="desc-info" placeholder="Description">
                                             </div>
                                         </div>
+                                        <label class="ml-5" for="neighborhood-info">Neighborhood</label>
                                         <div class="form-row">
-                                            <label for="neighborhood-info">Neighborhood</label>
                                             <div class="form-group mx-auto col-md-8">
+
+
                                                 <select class="form-control" id="neighborhood-info" placeholder="">
                                                     <option>1</option>
                                                     <option>2</option>
