edited  users page

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                                 <li><a href="">Reports</a></li>
                                                 <li><a href="roles.html">Roles</a></li>
                                                 <li><a href="#">Report Roles</a></li>
-                                                <li><a href="">Users</a></li>
+                                                <li><a href="users.html">Users</a></li>
                                                  <li><a href="">Users Roles</a></li>
                                                 <!-- Button -->
                                                 <li class="button-header margin-left "><a href="register.html" class="btn">Join</a></li>
