--- a/users.html
+++ b/users.html
@@ -95,12 +95,9 @@
                     Label the data
                     */
                     .td:nth-of-type(1):before { content: "ID"; !important }
-                    .td:nth-of-type(2):before { content: "Role";  !important}
-                    .td:nth-of-type(3):before { content: "Description";  !important}
-                    .td:nth-of-type(4):before { content: "Neighborhood";  !important}
-                    .td:nth-of-type(5):before { content: "Start";  !important}
-                    .td:nth-of-type(6):before { content: "End";  !important}
-                    .td:nth-of-type(7):before { content: "Edit";  !important}
+                    .td:nth-of-type(2):before { content: "Common User ID";  !important}
+                    .td:nth-of-type(3):before { content: "Begin Date";  !important}
+                    .td:nth-of-type(4):before { content: "Terminate Date";  !important}
                     
                     .edit-icon{
                         min-width: 25px !important;
@@ -198,7 +195,7 @@
                     <div class="section-top-border">
                         <h3 class="mb-30">Users</h3>
                         <div class="progress-table-wrap">
-                            <div class="progress-table" id="role-table">
+                            <div class="progress-table" id="user-table">
                                 <div class="table-head">
                                     <div class="serial th col-1">ID</div>
                                     <div class="serial th col-2">Common User ID</div>
@@ -210,26 +207,26 @@
                                     <div class="serial td col-2">x01</div>
                                     <div class="serial td col-4">06-06-2012</div>
                                     <div class="serial td col-4">06-06-2020</div>
-                                    <div class="serial col-1"><img src="assets/img/edit.png" class="img edit-icon" data-toggle="modal" data-target="#editRoleModal"></div>
+                                    <div class="serial col-1"><img src="assets/img/edit.png" class="img edit-icon" data-toggle="modal" data-target="#editUserModal"></div>
                                 </div>
                                 <div class="table-row">
                                     <div class="serial td col-1">01</div>
                                     <div class="serial td col-2">x01</div>
                                     <div class="serial td col-4">06-06-2012</div>
                                     <div class="serial td col-4">06-06-2020</div>
-                                    <div class="serial col-1"><img src="assets/img/edit.png" class="img edit-icon" data-toggle="modal" data-target="#editRoleModal"></div>
+                                    <div class="serial col-1"><img src="assets/img/edit.png" class="img edit-icon" data-toggle="modal" data-target="#editUserModal"></div>
                                 </div>
                                 <div class="table-row">
                                     <div class="serial td col-1">01</div>
                                     <div class="serial td col-2">x01</div>
                                     <div class="serial td col-4">06-06-2012</div>
                                     <div class="serial td col-4">06-06-2020</div>
-                                    <div class="serial col-1"><img src="assets/img/edit.png" class="img edit-icon" data-toggle="modal" data-target="#editRoleModal"></div>
+                                    <div class="serial col-1"><img src="assets/img/edit.png" class="img edit-icon" data-toggle="modal" data-target="#editUserModal"></div>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="mx-auto mt-3 p-3"><button type="button" class="btn btn-success" data-toggle="modal" data-target="#roleModal" id="add">Add</button></div>
+                            <div class="mx-auto mt-3 p-3"><button type="button" class="btn btn-success" data-toggle="modal" data-target="#userModal" id="add">Add</button></div>
                         </div>
                     </div>
                 </div>
@@ -355,14 +352,14 @@
                 <!-- End -->
 
 
-                <!--Add New Role Modal -->
+                <!--Add New User Modal -->
                 <div class="container">
                     <!-- Modal -->
-                    <div class="modal fade" id="roleModal" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
+                    <div class="modal fade" id="userModal" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="">Add a new role</h5>
+                                    <h5 class="modal-title" id="">Add a new user</h5>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
@@ -371,36 +368,30 @@
                                     <form>
                                         <div class="form-row">
                                             <div class="form-group mx-auto col-md-8">
-                                                <label>Role</label>
-                                                <input type="text" class="form-control" id="role-info" placeholder="Role">
+                                                <label>User</label>
+                                                <input type="text" class="form-control" id="user-info" placeholder="User">
                                             </div>
                                         </div>
                                         <div class="form-row">
                                             <div class="form-group mx-auto col-md-8">
-                                                <label>Description</label>
-                                                <input type="text" class="form-control" id="desc-info" placeholder="Description">
+                                                <label>ID</label>
+                                                <input type="text" class="form-control" id="id-info" placeholder="ID">
                                             </div>
                                         </div>
-                                        <div class="form-row">
+                                       <div class="form-row">
                                             <div class="form-group mx-auto col-md-8">
-                                                <label for="neighborhood-info">Neighborhood</label>
-                                                <select class="form-control" id="neighborhood-info" placeholder="">
-                                                    <option>1</option>
-                                                    <option>2</option>
-                                                    <option>3</option>
-                                                    <option>4</option>
-                                                    <option>5</option>
-                                                </select>
+                                                <label>Common User ID</label>
+                                                <input type="text" class="form-control" id="common-info" placeholder="Common User ID">
                                             </div>
                                         </div>
                                         <div class="form-row">
                                             <div class="form-group col-md-4 mx-auto">
-                                                <label>Start Date</label>
-                                                <input type="text" class="form-control" id="start-date">
+                                                <label>Begin Date</label>
+                                                <input type="text" class="form-control" id="begin-date">
                                             </div>
                                             <div class="form-group col-md-4 mx-auto">
-                                                <label>End Date</label>
-                                                <input type="text" class="form-control" id="end-date">
+                                                <label>Terminate Date</label>
+                                                <input type="text" class="form-control" id="term-date">
                                             </div>
                                         </div>
                                     </form>
@@ -408,7 +399,7 @@
 
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary mx-auto" data-dismiss="modal" id="close-user">Close</button>
-                                    <button type="button" class="btn btn-primary mx-auto" id="add-role">Add Role</button>
+                                    <button type="button" class="btn btn-primary mx-auto" id="add-user">Add User</button>
                                 </div>
                             </div>
                         </div>
@@ -416,10 +407,10 @@
                 </div>
                 <!-- End -->
 
-                <!-- Edit Role Modal -->
+                <!-- Edit User Modal -->
                 <div class="container">
                     <!-- Modal -->
-                    <div class="modal fade" id="editRoleModal" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
+                    <div class="modal fade" id="editUserModal" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
@@ -429,41 +420,33 @@
                                     </button>
                                 </div>
                                 <div class="modal-body">
-                                    <form>
+                                  <form>
                                         <div class="form-row">
                                             <div class="form-group mx-auto col-md-8">
-                                                <label>Role</label>
-                                                <input type="text" class="form-control" id="role-info" placeholder="Role">
+                                                <label>User</label>
+                                                <input type="text" class="form-control" id="user-info" placeholder="User">
                                             </div>
                                         </div>
                                         <div class="form-row">
                                             <div class="form-group mx-auto col-md-8">
-                                                <label>Description</label>
-                                                <input type="text" class="form-control" id="desc-info" placeholder="Description">
+                                                <label>ID</label>
+                                                <input type="text" class="form-control" id="id-info" placeholder="ID">
                                             </div>
                                         </div>
-                                        <label class="ml-5" for="neighborhood-info">Neighborhood</label>
-                                        <div class="form-row">
+                                       <div class="form-row">
                                             <div class="form-group mx-auto col-md-8">
-
-
-                                                <select class="form-control" id="neighborhood-info" placeholder="">
-                                                    <option>1</option>
-                                                    <option>2</option>
-                                                    <option>3</option>
-                                                    <option>4</option>
-                                                    <option>5</option>
-                                                </select>
+                                                <label>Common User ID</label>
+                                                <input type="text" class="form-control" id="common-info" placeholder="Common User ID">
                                             </div>
                                         </div>
                                         <div class="form-row">
                                             <div class="form-group col-md-4 mx-auto">
-                                                <label>Start Date</label>
-                                                <input type="text" class="form-control" id="start-date">
+                                                <label>Begin Date</label>
+                                                <input type="text" class="form-control" id="begin-date">
                                             </div>
                                             <div class="form-group col-md-4 mx-auto">
-                                                <label>End Date</label>
-                                                <input type="text" class="form-control" id="end-date">
+                                                <label>Terminate Date</label>
+                                                <input type="text" class="form-control" id="term-date">
                                             </div>
                                         </div>
                                     </form>
@@ -605,8 +588,8 @@
             i = 4; // place holder for user ID until database is ready
 
             // Button action when add is clicked
-            $("#add-role").click(function() {
-                $("#role-table").append(' <div class="table-row"><div class="serial col-1">0' + i + '</div><div class="serial col-1">' + $("#role-info").val() + '</div><div class="serial col-2">' + $("#desc-info").val() + '</div><div class="serial col-2">' + $("#neighborhood-info").val() + '</div><div class="serial col-2">' + $("#start-date").val() + '</div> <div class="serial col-2">' + $("#end-date").val() + '</div>   <div class="serial col-2"><img src="assets/img/edit.png" class="img edit-icon" data-toggle="modal" data-target="#editRoleModal"></div></div>');
+            $("#add-user").click(function() {
+                $("#user-table").append(' <div class="table-row"><div class="serial col-1">0' + i + '</div><div class="serial col-1">' + $("#user-info").val() + '</div><div class="serial col-2">' + $("#desc-info").val() + '</div><div class="serial col-2">' + $("#neighborhood-info").val() + '</div><div class="serial col-2">' + $("#start-date").val() + '</div> <div class="serial col-2">' + $("#end-date").val() + '</div>   <div class="serial col-2"><img src="assets/img/edit.png" class="img edit-icon" data-toggle="modal" data-target="#editUserModal"></div></div>');
                 i++;
                 $("#close-user").click();
             });
