roles.html and Navigation changes

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
     
 </head>
-
+<style>
+</style>
 <body>
     <!-- ? Preloader Start -->
     <div id="preloader-active">
@@ -58,16 +59,17 @@
                                     <!-- Main-menu -->
                                     <div class="main-menu d-none d-lg-block">
                                         <nav>
-                                            <ul id="navigation">                                                                                          
+                                            <ul id="navigation">
                                                 <li class="active" ><a href="index.html">Home</a></li>
-                                                <li><a href="">Reports</a></li>
+                                                <li><a href="reports.html">Reports</a></li>
                                                 <li><a href="roles.html">Roles</a></li>
                                                 <li><a href="#">Report Roles</a></li>
                                                 <li><a href="users.html">Users</a></li>
-                                                 <li><a href="">Users Roles</a></li>
+                                                <li><a href="">Users Roles</a></li>
                                                 <!-- Button -->
                                                 <li class="button-header margin-left "><a href="register.html" class="btn">Join</a></li>
                                                 <li class="button-header"><a href="login.html" class="btn">Log in</a></li>
+                                                
                                             </ul>
                                         </nav>
                                     </div>
