--- a/roles.html
+++ b/roles.html
@@ -141,9 +141,9 @@
                                         <div class="main-menu d-none d-lg-block">
                                             <nav>
                                                 <ul id="navigation">                                                                                          
-                                                    <li class="active" ><a href="index.html">Home</a></li>
+                                                    <li><a href="index.html">Home</a></li>
                                                     <li><a href="">Reports</a></li>
-                                                    <li><a href="roles.html">Roles</a></li>
+                                                    <li class="active"><a href="roles.html">Roles</a></li>
                                                     <li><a href="#">Report Roles</a></li>
                                                     <li><a href="users.html">Users</a></li>
                                                     <li><a href="">Users Roles</a></li>
